# algorithmsFinalProj

./: CMakeLists.txt  SDL_Plotter.cpp  SDL_Plotter.h  main.cpp
SDL2-2.0.9/i686-w64-mingw32/include/SDL2/: SDL_mixer.h
